--- a/sass/Main.sass
+++ b/sass/Main.sass
@@ -401,7 +401,7 @@
         .header
             margin-bottom: 70px
             //max-height: 550px
-            height: 1050px
+            height: 60vh//100vh//1050px
             background-image: url("../img/bg-header.png")
             background-size: cover
             background-repeat: no-repeat
@@ -727,8 +727,8 @@
                         gap: 2.08vw//40px
                         padding-left: 4.16vw//80px
                         img
-                            width: 350px
-                            height: 250px
+                            width: 400px
+                            height: 300px
         .footer
             padding: 4.12vw 7.16vw 6.25vw 4.16vw  //60px 80px 120px 80px
             background: rgb(26, 86, 83)
@@ -763,7 +763,7 @@
         .header
             margin-bottom: 70px
             //max-height: 550px
-            height: 550px
+            height: 500px//100vh//50vh//550px
             background-image: url("../img/bg-header.png")
             background-size: cover
             background-repeat: no-repeat
@@ -1140,7 +1140,7 @@
             position: relative
             margin-bottom: 40px
             //max-height: 550px
-            height: 60vh//100vh
+            height: 70vh//60vh//100vh
             background-image: url("../img/bg-header.png")
             background-size: cover
             background-repeat: no-repeat
