--- a/sass/Main.sass
+++ b/sass/Main.sass
@@ -30,7 +30,7 @@
     min-height: 100vh
     .header
         margin-bottom: 140px
-        height: 1080px
+        height: 100vh//1080px
         background-image: url("../img/bg-header.png")
         background-size: cover
         background-repeat: no-repeat
@@ -401,7 +401,7 @@
         .header
             margin-bottom: 70px
             //max-height: 550px
-            height: 60vh//100vh//1050px
+            height: 100vh//1050px
             background-image: url("../img/bg-header.png")
             background-size: cover
             background-repeat: no-repeat
@@ -763,7 +763,7 @@
         .header
             margin-bottom: 70px
             //max-height: 550px
-            height: 500px//100vh//50vh//550px
+            height: 100vh//500px//100vh//50vh//550px
             background-image: url("../img/bg-header.png")
             background-size: cover
             background-repeat: no-repeat
@@ -795,7 +795,7 @@
                 align-items: center
                 display: flex
                 justify-content: center
-                height: 370px
+                height: 80vh
                 div
                     h1
                         font: 700 23px 'e-Ukraine'
