--- a/sass/Main.sass
+++ b/sass/Main.sass
@@ -2023,6 +2023,8 @@
                                 color: #fff
                         div:last-child
                             display: none
+                        div:first-child
+                            display: flex
             .main__section5
                 margin-bottom: 40px
                 .section5__container
