--- a/css/Main.css
+++ b/css/Main.css
@@ -479,6 +479,11 @@
   margin: 0;
 }
 
+@media screen and (max-width: 1600px) {
+  .container .header .nav .header__ol .header__li a {
+    font-size: 19px;
+  }
+}
 @media screen and (max-width: 1280px) {
   .container .header {
     margin-bottom: 70px;
@@ -705,7 +710,7 @@
     font: bold 16px "e-Ukraine";
   }
   .container .header .nav .header__ol .header__li a {
-    font: 400 10px "Manrope";
+    font: 400 12px "Manrope";
   }
   .container .header .nav .header__ol .header__li:last-child {
     margin: 0;
@@ -1096,6 +1101,9 @@
   .container .main .main__section2 {
     margin: 0;
   }
+  .container .main .main__section2 .section2__container {
+    margin-bottom: 0;
+  }
   .container .main .main__section2 .section2__container .section2__title {
     font: 700 20px "e-Ukraine";
     margin-bottom: 20px;
@@ -1104,28 +1112,38 @@
     max-width: 100%;
     margin-bottom: 10px;
   }
-  .container .main .main__section2 .section2__container .section2__bloc_text .section2__container_text {
+  .container .main .main__section2 .section2__container .section2__bloc_text .swiper {
+    height: 100%;
+    position: relative;
+  }
+  .container .main .main__section2 .section2__container .section2__bloc_text .swiper .swiper-wrapper .swiper-slide .section2__container_text {
     width: 100%;
   }
-  .container .main .main__section2 .section2__container .section2__bloc_text .section2__container_text .section2__text {
+  .container .main .main__section2 .section2__container .section2__bloc_text .swiper .swiper-wrapper .swiper-slide .section2__container_text .section2__text {
     font: 400 10px "Manrope";
     margin-bottom: 10px;
   }
-  .container .main .main__section2 .section2__container .section2__bloc_text .section2__container_text .section2__text:nth-child(4) {
+  .container .main .main__section2 .section2__container .section2__bloc_text .swiper .swiper-wrapper .swiper-slide .section2__container_text .section2__text:nth-child(4) {
     margin-bottom: 20px;
   }
-  .container .main .main__section2 .section2__container .section2__bloc_text .section2__container_text .section2__block_photo {
+  .container .main .main__section2 .section2__container .section2__bloc_text .swiper .swiper-wrapper .swiper-slide .section2__container_text .section2__block_photo {
     justify-content: center;
-    margin-bottom: 10px;
+    margin-bottom: 0;
   }
-  .container .main .main__section2 .section2__container .slider1__click {
+  .container .main .main__section2 .slider1__click {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 20px;
   }
-  .container .main .main__section2 .section2__container .slider1__click img {
+  .container .main .main__section2 .slider1__click img {
     width: 40px;
     height: 30px;
+  }
+  .container .main .main__section2 .slider1__click div {
+    width: max-content;
+    height: min-content;
+    position: static;
   }
   .container .main .main__section3 .section3__title {
     font: 700 14px "e-Ukraine";
@@ -1463,7 +1481,7 @@
     margin: 0;
   }
   .container .main .main__section2 .section2__container {
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
   .container .main .main__section2 .section2__container .section2__title {
     font: 700 20px "e-Ukraine";
@@ -1471,7 +1489,7 @@
   }
   .container .main .main__section2 .section2__container .section2__bloc_text {
     max-width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   .container .main .main__section2 .section2__container .section2__bloc_text .section2__container_text {
     width: 100%;
@@ -1488,15 +1506,22 @@
     display: flex;
     justify-content: center;
     gap: 2.08vw;
-    margin-bottom: 10px;
+    margin-bottom: 0;
   }
-  .container .main .main__section2 .section2__container .slider1__click {
+  .container .main .main__section2 .slider1__click {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
   }
-  .container .main .main__section2 .section2__container .slider1__click img {
-    width: 40px;
-    height: 30px;
+  .container .main .main__section2 .slider1__click img {
+    width: 30px;
+    height: 25px;
+  }
+  .container .main .main__section2 .slider1__click div {
+    width: max-content;
+    height: min-content;
+    position: static;
   }
   .container .main .main__section3 {
     margin-bottom: 40px;
