--- a/css/MyProfile.css
+++ b/css/MyProfile.css
@@ -24,6 +24,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background: linear-gradient(186.67deg, rgba(245, 245, 245, 0.4) 17.93%, rgba(71, 140, 92, 0.4) 62.19%, rgba(245, 245, 245, 0.4) 107.52%);
+}
+
 .container {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -31,12 +35,13 @@
 }
 .container .header {
   margin-bottom: 140px;
+  padding: 2.08vw 4.16vw 0 4.16vw;
 }
 .container .header .nav {
   width: auto;
   display: flex;
   justify-content: space-between;
-  padding: 2.08vw 4.16vw 0 4.16vw;
+  margin-bottom: 15px;
 }
 .container .header .nav .burger__container {
   display: none;
@@ -54,46 +59,32 @@
   text-align: center;
   margin-right: 3.125vw;
 }
-.container .header .nav .header__ol .header__li a {
+.container .header .nav .header__ol .header__li a, .container .header .nav .header__ol .header__li p {
   text-decoration: none;
-  font: 400 24px "Manrope";
+  font: 400 1.1vw "Manrope";
   color: #1A5653;
 }
 .container .header .nav .header__ol .header__li:last-child {
+  display: flex;
+  align-items: center;
   margin: 0;
   cursor: pointer;
 }
-.container .header .header__section {
-  height: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container .header .nav .header__ol .header__li:last-child a {
+  margin-right: 15px;
 }
-.container .header .header__section div h1 {
-  font: 700 64px "e-Ukraine";
-  color: rgba(11, 10, 10, 0.5568627451) 8;
-  margin-bottom: 50px;
+.container .header .nav .header__ol .header__li:last-child img {
+  width: 2.5vw;
+  height: 2.5vw;
 }
-.container .header .header__section div p {
-  font: 400 32px "Manrope";
-  color: #1A5653;
-  text-align: center;
-  margin-bottom: 90px;
-}
-.container .header .header__section div div {
-  display: flex;
-  justify-content: center;
-}
-.container .header .header__section div div button {
-  padding: 24px 60px;
-  background: #1A5653;
-  border-radius: 999px;
-}
-.container .header .header__section div div button a {
+.container .header .header__navigation a, .container .header .header__navigation p {
+  color: black;
   text-decoration: none;
-  text-align: center;
-  font: 600 24px "Manrope";
-  color: #1A5653;
+  display: inline;
+  font: 400 1.1vw "Manrope";
+}
+.container .header .header__navigation a:first-child {
+  color: grey;
 }
 .container .main {
   overflow: auto;
@@ -103,18 +94,19 @@
 .container .main .main__section1 .section1__wrapper {
   display: flex;
   justify-content: space-between;
+  gap: 80px;
 }
 .container .main .main__section1 .section1__wrapper .section1__block {
   padding-top: 40px;
-  margin-right: 30px;
 }
 .container .main .main__section1 .section1__wrapper .section1__block h1 {
-  margin-bottom: 70px;
-  font: 700 48px "e-Ukraine";
-  height: min-content;
   width: max-content;
+  margin-bottom: 70px;
+  font: 700 30px "e-Ukraine";
 }
 .container .main .main__section1 .section1__wrapper .section1__block .section1__changeProfile_block {
+  width: 220px;
+  height: min-content;
   display: block;
   text-align: center;
   padding: 15px 0;
@@ -123,47 +115,64 @@
 }
 .container .main .main__section1 .section1__wrapper .section1__block .section1__changeProfile_block .section1__changeProfile {
   text-decoration: none;
-  font: 600 24px "Manrope";
+  font: 600 16px "Manrope";
   color: #fff;
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 {
-  width: 1200px;
+  background: #fff;
+  width: 1000px;
   border: 1px solid black;
   border-radius: 30px;
-  padding: 3.25vw 4.16vw 4.16vw 4.16vw;
+  padding: 30px;
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .section1__historyOrder {
   width: max-content;
-  font: 600 24px "Manrope";
-  margin-bottom: 70px;
+  font: 600 22px "Manrope";
+  margin-bottom: 30px;
   border-bottom: 2px solid black;
   padding-bottom: 10px;
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container {
   overflow: scroll;
   overflow-x: hidden;
-  height: 420px;
+  height: 300px;
   padding-right: 30px;
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order {
   display: flex;
   justify-content: space-between;
-  margin: 0 0 30px 0;
+  margin: 0 20px 20px 0;
   border-bottom: 1px solid grey;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
+  margin-right: 0;
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li:first-child {
   color: rgb(140, 140, 140);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li, .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li {
-  font: 400 24px "Manrope";
+  font: 400 22px "Manrope";
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li:first-child {
   opacity: 0;
 }
-.container .main .main__section1 .section1__changeProfile_block {
+.container .main .main__section2 {
   display: none;
+  justify-content: end;
+}
+.container .main .main__section2 .section1__changeProfile_block {
+  width: 100%;
+  height: min-content;
+  display: block;
+  text-align: center;
+  padding: 15px 0;
+  border-radius: 999px;
+  background: rgb(26, 86, 83);
+}
+.container .main .main__section2 .section1__changeProfile_block .section1__changeProfile {
+  text-decoration: none;
+  font: 600 16px "Manrope";
+  color: #fff;
 }
 .container .footer {
   padding: 3.12vw 4.16vw 6.25vw 4.16vw;
@@ -239,7 +248,6 @@
   .container .header .nav {
     display: flex;
     justify-content: space-between;
-    padding: 2.08vw 4.16vw 0 4.16vw;
   }
   .container .header .nav .header__liFirst {
     font: bold 24px "e-Ukraine";
@@ -295,18 +303,18 @@
   .container .main .main__section1 .section1__wrapper {
     display: flex;
     justify-content: space-between;
+    gap: 80px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block {
     padding-top: 40px;
-    margin-right: 30px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block h1 {
     margin-bottom: 70px;
-    font: 700 38px "e-Ukraine";
-    height: min-content;
-    width: max-content;
+    font: 700 30px "e-Ukraine";
   }
   .container .main .main__section1 .section1__wrapper .section1__block .section1__changeProfile_block {
+    width: 220px;
+    height: min-content;
     display: block;
     text-align: center;
     padding: 15px 0;
@@ -322,12 +330,12 @@
     width: 1000px;
     border: 1px solid black;
     border-radius: 30px;
-    padding: 50px;
+    padding: 30px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__historyOrder {
     width: max-content;
-    font: 600 24px "Manrope";
-    margin-bottom: 70px;
+    font: 600 22px "Manrope";
+    margin-bottom: 30px;
     border-bottom: 2px solid black;
     padding-bottom: 10px;
   }
@@ -340,16 +348,17 @@
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order {
     display: flex;
     justify-content: space-between;
-    margin: 0 0 30px 0;
+    margin: 0 20px 20px 0;
     border-bottom: 1px solid grey;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+    margin-right: 0;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li:first-child {
     color: rgb(140, 140, 140);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li, .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li {
-    font: 400 24px "Manrope";
+    font: 400 22px "Manrope";
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li:first-child {
     opacity: 0;
@@ -404,7 +413,6 @@
   .container .header .nav {
     display: flex;
     justify-content: space-between;
-    padding: 2.08vw 4.16vw 0 4.16vw;
   }
   .container .header .nav .header__liFirst {
     font: bold 16px "e-Ukraine";
@@ -419,14 +427,14 @@
   }
   .container .header .nav .header__ol .header__li a {
     text-decoration: none;
-    font: 400 10px "Manrope";
+    font: 400 11px "Manrope";
   }
   .container .header .nav .header__ol .header__li:last-child {
     margin: 0;
   }
   .container .header .nav .header__ol .header__li:last-child img {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
   }
   .container .header .header__section {
     align-items: center;
@@ -458,6 +466,9 @@
     font: 600 14px "Manrope";
     color: #000;
   }
+  .container .header .header__navigation a {
+    font: 400 11px "Manrope";
+  }
   .container .main {
     overflow: auto;
     margin-bottom: 120px;
@@ -466,10 +477,11 @@
   .container .main .main__section1 .section1__wrapper {
     display: flex;
     justify-content: space-between;
+    gap: 50px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block {
     padding-top: 40px;
-    margin-right: 30px;
+    gap: 30px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block h1 {
     margin-bottom: 70px;
@@ -493,11 +505,12 @@
     border: 1px solid black;
     border-radius: 30px;
     padding: 30px;
+    gap: 50px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__historyOrder {
     width: max-content;
-    font: 600 24px "Manrope";
-    margin-bottom: 70px;
+    font: 600 22px "Manrope";
+    margin-bottom: 30px;
     border-bottom: 2px solid black;
     padding-bottom: 10px;
   }
@@ -505,20 +518,22 @@
     overflow: scroll;
     overflow-x: hidden;
     height: 300px;
+    padding-right: 20px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order {
     display: flex;
     justify-content: space-between;
-    margin: 0 20px 30px 0;
+    margin: 0 20px 20px 0;
     border-bottom: 1px solid grey;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+    margin-right: 0;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li:first-child {
     color: rgb(140, 140, 140);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li, .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li {
-    font: 400 24px "Manrope";
+    font: 400 22px "Manrope";
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li:first-child {
     opacity: 0;
@@ -568,6 +583,7 @@
 }
 @media screen and (max-width: 768px) {
   .container .header {
+    padding: 4.16vw 4.16vw 0 4.16vw;
     overflow: hidden;
     position: relative;
     margin-bottom: 0;
@@ -577,7 +593,6 @@
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-    padding: 0;
   }
   .container .header .nav .header__liFirst {
     display: none;
@@ -588,7 +603,6 @@
   .container .header .nav .burger__container {
     display: block;
     box-sizing: border-box;
-    padding: 2.08vw 4.16vw 0 4.16vw;
     width: 100%;
     height: auto;
     position: relative;
@@ -598,7 +612,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 30px;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block {
     display: flex;
@@ -668,42 +681,8 @@
     width: 30px;
     height: 30px;
   }
-  .container .header .header__section {
-    display: flex;
-    justify-content: center;
-    height: 60%;
-  }
-  .container .header .header__section div div {
-    text-align: center;
-  }
-  .container .header .header__section div div h1 {
-    width: min-content;
-    font: 700 23px "e-Ukraine";
-    color: #fff;
-    margin-bottom: 20px;
-    display: block;
-  }
-  .container .header .header__section div p {
-    font: 400 14px "Manrope";
-    color: #fff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .container .header .header__section div div {
-    display: flex;
-    justify-content: center;
-  }
-  .container .header .header__section div div button {
-    border: 0;
-    padding: 4px 15px;
-    background: #fff;
-    border-radius: 999px;
-  }
-  .container .header .header__section div div button a {
-    text-decoration: none;
-    text-align: center;
-    font: 600 14px "Manrope";
-    color: #000;
+  .container .header .header__navigation {
+    margin-bottom: 50px;
   }
   .container .main {
     overflow: auto;
@@ -718,8 +697,8 @@
     padding-top: 0;
   }
   .container .main .main__section1 .section1__wrapper .section1__block h1 {
-    margin-bottom: 70px;
-    font: 700 28px "e-Ukraine";
+    margin-bottom: 40px;
+    font: 700 22px "e-Ukraine";
   }
   .container .main .main__section1 .section1__wrapper .section1__block .section1__changeProfile_block {
     display: none;
@@ -743,7 +722,7 @@
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__historyOrder_block .section1__historyOrder {
     width: max-content;
-    font: 600 24px "Manrope";
+    font: 600 20px "Manrope";
     margin-bottom: 30px;
     border-bottom: 2px solid black;
     padding-bottom: 10px;
@@ -752,21 +731,23 @@
     overflow: scroll;
     overflow-x: hidden;
     height: 300px;
+    padding-right: 15px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order {
     display: flex;
     justify-content: space-between;
-    margin: 0;
+    margin-bottom: 10px;
     border-bottom: 1px solid grey;
-    padding-bottom: 30px;
-    padding-right: 15px;
+    padding-bottom: 10px;
+    padding-right: 0;
+    margin-right: 0;
   }
-  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li:first-chisld {
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li:first-child {
     color: rgb(140, 140, 140);
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li, .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li {
-    font: 400 24px "Manrope";
+    font: 400 18px "Manrope";
   }
   .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li:first-child {
     opacity: 0;
@@ -774,14 +755,17 @@
   .container .main .main__section1 .section1__changeProfile_block {
     display: block;
     text-align: center;
-    padding: 15px 0;
+    padding: 10px 0;
     border-radius: 999px;
     background: rgb(26, 86, 83);
   }
   .container .main .main__section1 .section1__changeProfile_block .section1__changeProfile {
     text-decoration: none;
-    font: 600 20px "Manrope";
+    font: 600 16px "Manrope";
     color: #fff;
+  }
+  .container .main .main__section2 {
+    display: flex;
   }
   .container .footer {
     display: flex;
@@ -830,6 +814,85 @@
   }
 }
 @media screen and (max-width: 425px) {
+  .container .main {
+    overflow: auto;
+    margin-bottom: 70px;
+    padding: 2.08vw 4.16vw 0 4.16vw;
+  }
+  .container .main .main__section1 .section1__wrapper {
+    display: block;
+    justify-content: space-between;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block {
+    padding-top: 0;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block h1 {
+    margin-bottom: 40px;
+    font: 700 22px "e-Ukraine";
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block .section1__changeProfile_block {
+    display: none;
+    text-align: center;
+    padding: 24px 60px;
+    border-radius: 999px;
+    background: rgb(26, 86, 83);
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block .section1__changeProfile_block .section1__changeProfile {
+    display: none;
+    text-decoration: none;
+    font: 600 24px "Manrope";
+    color: #fff;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 {
+    width: auto;
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 20px;
+    margin-bottom: 50px;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__historyOrder_block .section1__historyOrder {
+    width: max-content;
+    font: 600 20px "Manrope";
+    margin-bottom: 30px;
+    border-bottom: 2px solid black;
+    padding-bottom: 10px;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container {
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 300px;
+    padding-right: 15px;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    border-bottom: 1px solid grey;
+    padding-bottom: 10px;
+    padding-right: 0;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li:first-child {
+    color: rgb(140, 140, 140);
+    margin-bottom: 5px;
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li, .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_1 li {
+    font: 400 18px "Manrope";
+  }
+  .container .main .main__section1 .section1__wrapper .section1__block2 .section1__block2__container .section1__block2_order .section1__ol_2 li:first-child {
+    opacity: 0;
+  }
+  .container .main .main__section1 .section1__changeProfile_block {
+    display: block;
+    text-align: center;
+    padding: 10px 0;
+    border-radius: 999px;
+    background: rgb(26, 86, 83);
+  }
+  .container .main .main__section1 .section1__changeProfile_block .section1__changeProfile {
+    text-decoration: none;
+    font: 600 16px "Manrope";
+    color: #fff;
+  }
   .container .footer {
     display: flex;
     justify-content: center;
