--- a/css/SettingProfile.css
+++ b/css/SettingProfile.css
@@ -30,13 +30,14 @@
   min-height: 100vh;
 }
 .container .header {
+  padding: 2.08vw 4.16vw 0 4.16vw;
   margin-bottom: 140px;
 }
 .container .header .nav {
   width: auto;
   display: flex;
   justify-content: space-between;
-  padding: 2.08vw 4.16vw 0 4.16vw;
+  margin-bottom: 15px;
 }
 .container .header .nav .burger__container {
   display: none;
@@ -56,43 +57,26 @@
 }
 .container .header .nav .header__ol .header__li a {
   text-decoration: none;
-  font: 400 24px "Manrope";
+  font: 400 1.1vw "Manrope";
   color: #1A5653;
 }
 .container .header .nav .header__ol .header__li:last-child {
+  display: flex;
+  align-items: center;
   margin: 0;
   cursor: pointer;
 }
-.container .header .header__section {
-  height: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container .header .nav .header__ol .header__li:last-child a {
+  text-decoration: underline;
+  margin-right: 15px;
 }
-.container .header .header__section div h1 {
-  font: 700 64px "e-Ukraine";
-  color: rgba(11, 10, 10, 0.5568627451) 8;
-  margin-bottom: 50px;
-}
-.container .header .header__section div p {
-  font: 400 32px "Manrope";
-  color: #1A5653;
-  text-align: center;
-  margin-bottom: 90px;
-}
-.container .header .header__section div div {
-  display: flex;
-  justify-content: center;
-}
-.container .header .header__section div div button {
-  padding: 24px 60px;
-  background: #1A5653;
-  border-radius: 999px;
-}
-.container .header .header__section div div button a {
+.container .header .header__navigation a, .container .header .header__navigation p {
+  color: grey;
   text-decoration: none;
-  text-align: center;
-  font: 600 24px "Manrope";
+  display: inline;
+  font: 400 1.1vw "Manrope";
+}
+.container .header .header__navigation p {
   color: #1A5653;
 }
 .container .main {
@@ -141,7 +125,8 @@
   font: 400 24px "Manrope";
 }
 .container .main .main__section1 .section1__wrapper .section1__block2 .block2__wrapper2 .block2__changeInfo {
-  padding: 24px 60px;
+  height: min-content;
+  padding: 14px 60px;
   background: #1A5653;
   border-radius: 999px;
 }
@@ -197,7 +182,6 @@
   .container .header .nav {
     display: flex;
     justify-content: space-between;
-    padding: 2.08vw 4.16vw 0 4.16vw;
   }
   .container .header .nav .header__liFirst {
     font: bold 24px "e-Ukraine";
@@ -212,7 +196,7 @@
   }
   .container .header .nav .header__ol .header__li a {
     text-decoration: none;
-    font: 400 15px "Manrope";
+    font: 400 13px "Manrope";
   }
   .container .header .nav .header__ol .header__li:last-child {
     margin: 0;
@@ -351,7 +335,6 @@
   .container .header .nav {
     display: flex;
     justify-content: space-between;
-    padding: 2.08vw 4.16vw 0 4.16vw;
   }
   .container .header .nav .header__liFirst {
     font: bold 16px "e-Ukraine";
@@ -366,7 +349,7 @@
   }
   .container .header .nav .header__ol .header__li a {
     text-decoration: none;
-    font: 400 10px "Manrope";
+    font: 400 11px "Manrope";
   }
   .container .header .nav .header__ol .header__li:last-child {
     margin: 0;
@@ -375,35 +358,8 @@
     width: 30px;
     height: 30px;
   }
-  .container .header .header__section {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 370px;
-  }
-  .container .header .header__section div h1 {
-    font: 700 23px "e-Ukraine";
-    margin-bottom: 20px;
-  }
-  .container .header .header__section div p {
-    font: 400 14px "Manrope";
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .container .header .header__section div div {
-    display: flex;
-    justify-content: center;
-  }
-  .container .header .header__section div div button {
-    border: 0;
-    padding: 4px 15px;
-    border-radius: 999px;
-  }
-  .container .header .header__section div div button a {
-    text-decoration: none;
-    text-align: center;
-    font: 600 14px "Manrope";
-    color: #000;
+  .container .header .header__navigation a, .container .header .header__navigation p {
+    font-size: 10px;
   }
   .container .main {
     overflow: auto;
@@ -503,11 +459,12 @@
     margin: 0;
   }
 }
-@media screen and (max-width: 737px) {
+@media screen and (max-width: 845px) {
   .container {
     overflow: hidden;
   }
   .container .header {
+    padding: 4.16vw 4.16vw 0 4.16vw;
     overflow: hidden;
     position: relative;
     margin-bottom: 40px;
@@ -517,7 +474,6 @@
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-    padding: 2.08vw 4.16vw 0 4.16vw;
   }
   .container .header .nav .header__liFirst {
     display: none;
@@ -538,7 +494,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 30px;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block {
     display: flex;
@@ -762,13 +717,13 @@
     overflow: hidden;
     position: relative;
     margin-bottom: 40px;
+    padding: 4.16vw 4.16vw 0 4.16vw;
   }
   .container .header .nav {
     position: relative;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-    padding: 2.08vw 4.16vw 0 4.16vw;
   }
   .container .header .nav .header__liFirst {
     display: none;
@@ -789,7 +744,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 30px;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block {
     display: flex;
@@ -858,43 +812,6 @@
   .container .header .nav .header__ol .header__li:last-child img {
     width: 30px;
     height: 30px;
-  }
-  .container .header .header__section {
-    display: flex;
-    justify-content: center;
-    height: 60%;
-  }
-  .container .header .header__section div div {
-    text-align: center;
-  }
-  .container .header .header__section div div h1 {
-    width: min-content;
-    font: 700 23px "e-Ukraine";
-    color: #fff;
-    margin-bottom: 20px;
-    display: block;
-  }
-  .container .header .header__section div p {
-    font: 400 14px "Manrope";
-    color: #fff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .container .header .header__section div div {
-    display: flex;
-    justify-content: center;
-  }
-  .container .header .header__section div div button {
-    border: 0;
-    padding: 4px 15px;
-    background: #fff;
-    border-radius: 999px;
-  }
-  .container .header .header__section div div button a {
-    text-decoration: none;
-    text-align: center;
-    font: 600 14px "Manrope";
-    color: #000;
   }
   .container .main {
     display: block;
