--- a/sass/Main.sass
+++ b/sass/Main.sass
@@ -387,7 +387,13 @@
                 .footer__list2
                     li:last-child
                         margin: 0
-@media screen and ( max-width:1280px  )//1236px
+
+
+@media screen and ( max-width:1600px)
+    .container .header .nav .header__ol .header__li a 
+        font-size: 19px
+
+@media screen and ( max-width:1280px)//1236px
     .container
         .header
             margin-bottom: 70px
@@ -587,7 +593,7 @@
                 .header__ol
                     .header__li
                         a
-                            font: 400 10px 'Manrope'
+                            font: 400 12px 'Manrope'
                     .header__li:last-child
                         margin: 0
                         img
@@ -908,32 +914,42 @@
             .main__section2
                 margin: 0
                 .section2__container
+                    margin-bottom: 0
                     .section2__title
                         font: 700 20px 'e-Ukraine'
                         margin-bottom: 20px
                     .section2__bloc_text
                         max-width: 100%
                         margin-bottom: 10px
-                        .section2__container_text
-                            width:100% //44.79vw//680px
-                            .section2__text
-                                font: 400 10px 'Manrope'
-                                margin-bottom: 10px
-                            .section2__text:nth-child(4)
-                                margin-bottom: 20px
-                            .section2__block_photo
-                                justify-content: center
-                                margin-bottom: 10px
-                                div
-                                    img
-                    .slider1__click
-                        display: flex
-                        justify-content: space-between
-                        margin-bottom: 20px
-                        img
-                            width: 40px
-                            height:30px
-
+                        .swiper
+                            height: 100%
+                            position: relative
+                            .swiper-wrapper
+                                .swiper-slide
+                                    .section2__container_text
+                                        width:100% //44.79vw//680px
+                                        .section2__text
+                                            font: 400 10px 'Manrope'
+                                            margin-bottom: 10px
+                                        .section2__text:nth-child(4)
+                                            margin-bottom: 20px
+                                        .section2__block_photo
+                                            justify-content: center
+                                            margin-bottom: 0
+                                            div
+                                                img
+                .slider1__click
+                    display: flex
+                    justify-content: space-between
+                    align-items: center
+                    margin-bottom: 20px
+                    img
+                        width: 40px
+                        height:30px
+                    div     
+                        width: max-content
+                        height: min-content
+                        position: static
 
             .main__section3
                 .section3__title
@@ -1208,13 +1224,13 @@
             .main__section2
                 margin: 0
                 .section2__container
-                    margin-bottom: 30px
+                    margin-bottom: 0
                     .section2__title
                         font: 700 20px 'e-Ukraine'
                         margin-bottom: 20px
                     .section2__bloc_text
                         max-width: 100%
-                        margin-bottom: 20px
+                        margin-bottom: 30px
                         .section2__container_text
                             width:100% //44.79vw//680px
                             .section2__text
@@ -1227,15 +1243,21 @@
                                 display: flex
                                 justify-content: center
                                 gap: 2.08vw//40px
-                                margin-bottom: 10px
+                                margin-bottom: 0
                                 div
                                     img   
-                    .slider1__click
-                        display: flex
-                        justify-content: space-between
-                        img
-                            width: 40px
-                            height:30px
+                .slider1__click
+                    display: flex
+                    justify-content: space-between
+                    align-items: center
+                    margin-bottom: 20px
+                    img
+                        width: 30px
+                        height: 25px
+                    div     
+                        width: max-content
+                        height: min-content
+                        position: static
             .main__section3
                 margin-bottom: 40px
                 .section3__title
